@@ -214,8 +214,7 @@ static void ECPGdump_a_struct(FILE *o, const char *name, const char *ind_name, c
 
 void
 ECPGdump_a_type(FILE *o, const char *name, struct ECPGtype * type,
-		const char *var_array_element, const char *ind_name,
-		struct ECPGtype * ind_type, const char *ind_array_element,
+		const char *ind_name, struct ECPGtype * ind_type,
 		const char *prefix, const char *ind_prefix,
 		char *arr_str_siz, const char *struct_sizeof,
 		const char *ind_struct_sizeof)
@@ -232,65 +231,20 @@ ECPGdump_a_type(FILE *o, const char *name, struct ECPGtype * type,
 					break;
 				case ECPGt_struct:
 				case ECPGt_union:
-					/* If var_array_element is not equal
-					 * NULL, we have to use the
-					 * <var_array_element>th entry and
-					 * not the whole array */
-					if (var_array_element == NULL)
-						ECPGdump_a_struct(o, name,
-								ind_name,
-								type->size,
-								type->u.element,
-								(ind_type->type == ECPGt_NO_INDICATOR) ? ind_type : ind_type->u.element,
-								NULL, prefix, ind_prefix);
-					else
-					{
-						char *array_element = (char *)mm_alloc(strlen(name) + strlen(var_array_element) + sizeof("[]\0")), *ind_array_element;
-						
-						sprintf(array_element, "%s[%s]", name, var_array_element);
-
-						if (ind_type->type != ECPGt_NO_INDICATOR)
-						{
-							ind_array_element = (char *)mm_alloc(strlen(ind_name) + strlen(ind_array_element) + sizeof("+\0"));
-	                                                sprintf(ind_array_element, "%s[%s]", ind_name, ind_array_element);
-
-							ECPGdump_a_struct(o, array_element, ind_array_element, make_str("1"),
-	                                                              type->u.element, ind_type->u.element,
-	                                                              NULL, prefix, ind_prefix);
-							free(ind_array_element);
-						}
-						else
-							ECPGdump_a_struct(o, array_element, ind_name, make_str("1"),
-								type->u.element, ind_type,
-								NULL, prefix, ind_prefix);
-
-						free (array_element);
-					}
+					ECPGdump_a_struct(o, name,
+							ind_name,
+							type->size,
+							type->u.element,
+							(ind_type->type == ECPGt_NO_INDICATOR) ? ind_type : ind_type->u.element,
+							NULL, prefix, ind_prefix);
 					break;
 				default:
 					if (!IS_SIMPLE_TYPE(type->u.element->type))
 						yyerror("Internal error: unknown datatype, please inform pgsql-bugs@postgresql.org");
 
-					/* If var_array_element is not equal
-					 * NULL, we have to use the
-					 * <var_array_element>th entry and not
-					 * the whole array */
-					if (var_array_element == NULL)
-						ECPGdump_a_simple(o, name,
-							type->u.element->type,
+					ECPGdump_a_simple(o, name,
+						type->u.element->type,
 						type->u.element->size, type->size, NULL, prefix);
-					else
-					{
-						char *array_element = (char *)mm_alloc(strlen(name) + strlen(var_array_element) + sizeof("+\0"));
-						
-						sprintf(array_element, "%s+%s", name, var_array_element);
-						ECPGdump_a_simple(o, array_element,
-							type->u.element->type,
-							type->u.element->size, make_str("1"), NULL, prefix);
-						free(array_element);
-						
-						
-					}
 					
 					if (ind_type != NULL)
 					{
@@ -298,20 +252,8 @@ ECPGdump_a_type(FILE *o, const char *name, struct ECPGtype * type,
 							ECPGdump_a_simple(o, ind_name, ind_type->type, ind_type->size, make_str("-1"), NULL, ind_prefix);
 						else
 						{
-							if (ind_array_element == NULL)
-								ECPGdump_a_simple(o, ind_name, ind_type->u.element->type,
-										  ind_type->u.element->size, ind_type->size, NULL, prefix);
-							else
-							{
-								char *array_element = (char *)mm_alloc(strlen(ind_name) + strlen(ind_array_element) + sizeof("+\0"));
-							
-								sprintf(array_element, "%s+%s", ind_name, ind_array_element);
-								ECPGdump_a_simple(o, array_element,
-										ind_type->u.element->type,
-										ind_type->u.element->size,
-										make_str("1"), NULL, prefix);
-								free(array_element);
-							}
+							ECPGdump_a_simple(o, ind_name, ind_type->u.element->type,
+									  ind_type->u.element->size, ind_type->size, NULL, prefix);
 						}
 					}
 			}
@@ -516,9 +458,9 @@ ECPGdump_a_struct(FILE *o, const char *name, const char *ind_name, char *arrsiz,
 
 	for (p = type->u.members; p; p = p->next)
 	{
-		ECPGdump_a_type(o, p->name, p->type, NULL,
+		ECPGdump_a_type(o, p->name, p->type, 
 				(ind_p != NULL) ? ind_p->name : NULL,
-				(ind_p != NULL) ? ind_p->type : NULL, NULL,
+				(ind_p != NULL) ? ind_p->type : NULL, 
 				prefix, ind_prefix, arrsiz, type->struct_sizeof,
 				(ind_p != NULL) ? ind_type->struct_sizeof : NULL);
 		if (ind_p != NULL && ind_p != &struct_no_indicator)
